# IPL

./: .gitignore  CMakeLists.txt  Makefile  README  main  main.imp  main.ipl  main.lm  output.txt
ast/: ExecContext.cc  ExecContext.hh  IPLFactory.hh  Interpreter.cc  Interpreter.hh  Makefile  Node.hh  Value.hh  Visitor.hh  main  main.cpp
ast/expr/: AddExpr.cc  AddExpr.hh  CallFunc.cc  CallFunc.hh  DivExpr.cc  DivExpr.hh  Expr.hh  Float.cc  Float.hh  Id.cc  Id.hh  Int.cc  Int.hh  ModExpr.cc  ModExpr.hh  MulExpr.cc  MulExpr.hh  SubtExpr.cc  SubtExpr.hh
ast/expr/arithmatic/: AddExpr.cc  AddExpr.hh  BinaryExpr.hh  DivExpr.cc  DivExpr.hh  MinusExpr.cc  MinusExpr.hh  ModExpr.cc  ModExpr.hh  MulExpr.cc  MulExpr.hh  SubtExpr.cc  SubtExpr.hh
ast/expr/boolean/: And.cc  And.hh  BoolExpr.hh  Equal.cc  Equal.hh  Greater.cc  Greater.hh  GreaterEqual.cc  GreaterEqual.hh  Less.cc  Less.hh  LessEqual.cc  LessEqual.hh  Not.cc  Not.hh  NotEqual.cc  NotEqual.hh  Or.cc  Or.hh
ast/expr/imgOp/: Load.cc  Load.hh  Save.cc  Save.hh
ast/expr/value/: Bool.cc  Bool.hh  Float.cc  Float.hh  Id.cc  Id.hh  Int.cc  Int.hh  Number.hh  String.cc  String.hh
ast/expr/value/image/: Image.cc  Image.hh  JpgImage.cc  JpgImage.hh  Pixel.cc  Pixel.hh  PngImage.cc  PngImage.hh  TiffImage.cc  TiffImage.hh
ast/expr/value/image/pixel/: GrayPixel.cc  GrayPixel.hh  Pixel.cc  Pixel.hh  RgbPixel.cc  RgbPixel.hh  RgbaPixel.cc  RgbaPixel.hh
ast/stmt/: Block.cc  Block.hh  DefFunc.cc  DefFunc.hh  DefVar.cc  DefVar.hh  ForLoop.cc  ForLoop.hh  Ifcond.cc  Ifcond.hh  Ifelse.cc  Ifelse.hh  PrintExpr.cc  PrintExpr.hh  ReturnStmt.cc  ReturnStmt.hh  Statement.hh  While.cc  While.hh
ast/stmt/assignment/: AddAssign.cc  AddAssign.hh  Assign.cc  Assign.hh  Decrease.cc  Decrease.hh  DivAssign.cc  DivAssign.hh  Increase.cc  Increase.hh  MulAssign.cc  MulAssign.hh  SubAssign.cc  SubAssign.hh
code/: cars.ipl  cars2.ipl  gray.ipl  grid.ipl  hist_e.ipl  histgram.ipl  invert.ipl  luna.ipl  main.ipl  main.lm  main1.ipl  median.ipl  recursion.ipl  smooth.ipl  test.ipl  testFor.ipl
include/ipl/: IPLContext.hh  IPLInterpreter.hh  Visitor.hh
include/ipl/ast/: ASTNode.hh  VarNode.hh
include/ipl/parser/: Lexer.hh  Parser.hh
interpreter/: ExecContext.cc  ExecContext.hh  IPLFactory.hh  Interpreter.cc  Interpreter.hh  Visitor.hh
logger/: Log.cc  Log.hh
parser/: all_headers.hh  header.bash  ipl.cc  ipl.hh  ipl.lex.cc  ipl.ll  ipl.parse.cc  ipl.parse.hh  ipl.yy  main.hh  main.lex.cc  main.ll  main.parse.cc  main.parse.hh  main.parse.output  main.yy
utils/: ImageOperation.hh  ImageProcessor.cc  ImageProcessor.hh  ImageType.hh  Utility.cc  Utility.hh
utils/ChartGenerator/: Chart.cc  Font.hh
